try setup i18n in project #2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,15 @@
       ],
       "@/entities/*": [
         "entities/*"
+      ],
+      "@/pages/*": [
+        "pages/*"
+      ],
+      "@/widgets/*": [
+        "widgets/*"
+      ],
+      "@/app/*": [
+        "app/*"
       ]
     },
     "target": "es6",
