--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "11.1.2",
+    "next-i18next": "^8.7.0",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "axios": "0.21.4",
+    "babel-plugin-styled-components": "1.13.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.1.2",
