--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^11.1.2",
     "@types/react": "17.0.20",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
