--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "social-network",
+  "name": "social-network-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "11.1.2",
-    "next-i18next": "^8.7.0",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-i18next": "^11.12.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^11.1.2",
     "@types/react": "17.0.20",
+    "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
-    "axios": "0.21.4",
     "babel-plugin-styled-components": "1.13.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -34,6 +32,7 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "7.0.2",
-    "prettier": "2.4.0"
+    "prettier": "2.4.0",
+    "typescript": "4.4.3"
   }
 }
