--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
       "@/entities/*": [
         "entities/*"
       ],
-      "@/pages/*": [
-        "pages/*"
+      "@/pagesLayout/*": [
+        "pagesLayout/*"
       ],
       "@/widgets/*": [
         "widgets/*"
@@ -21,15 +21,11 @@
         "app/*"
       ]
     },
-    "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -39,12 +35,5 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
