--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-transition-group": "4.4.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
