--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "0.24.0",
     "effector": "22.1.1",
     "effector-next": "1.3.1",
     "effector-react": "22.0.4",
+    "js-cookie": "3.0.1",
     "next": "11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
@@ -20,6 +22,7 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "3.0.0",
     "@types/react": "17.0.20",
     "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
