--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,8 +1,4 @@
 {
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "arrowParens": "always"
+  "singleQuote": true,
+  "trailingComma": "all"
 }
