--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/js-cookie": "3.0.0",
     "@types/react": "17.0.20",
+    "@types/react-transition-group": "4.4.4",
     "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
