fix auth, add users page; fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "useUnknownInCatchVariables": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
