--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "0.24.0",
     "effector": "22.1.1",
     "effector-react": "22.0.4",
+    "javascript-time-ago": "2.3.10",
     "js-cookie": "3.0.1",
     "next": "11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "7.21.0",
+    "react-intersection-observer": "8.32.5",
     "react-transition-group": "4.4.2",
     "styled-components": "^5.3.1"
   },
