--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "7.21.0",
     "react-intersection-observer": "8.32.5",
+    "react-time-ago": "7.1.4",
     "react-transition-group": "4.4.2",
     "styled-components": "^5.3.1"
   },
