--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "effector-react": "22.0.4",
     "javascript-time-ago": "2.3.10",
     "js-cookie": "3.0.1",
+    "lodash.debounce": "4.0.8",
     "next": "11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.0",
+    "@types/lodash.debounce": "4.0.6",
     "@types/react": "17.0.20",
     "@types/react-transition-group": "4.4.4",
     "@types/styled-components": "5.1.14",
