--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-intersection-observer": "8.32.5",
     "react-time-ago": "7.1.4",
     "react-transition-group": "4.4.2",
+    "socket.io-client": "4.4.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
