--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "7.21.0",
     "react-intersection-observer": "8.32.5",
     "react-time-ago": "7.1.4",
+    "react-toastify": "8.1.0",
     "react-transition-group": "4.4.2",
     "socket.io-client": "4.4.1",
     "styled-components": "^5.3.1"
