--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "effector-react": "22.0.4",
     "javascript-time-ago": "2.3.10",
     "js-cookie": "3.0.1",
+    "jwt-decode": "3.1.2",
     "lodash.debounce": "4.0.8",
-    "next": "11.1.2",
+    "next": "12.1.4",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/js-cookie": "3.0.0",
     "@types/lodash.debounce": "4.0.6",
+    "@types/node": "17.0.23",
     "@types/react": "17.0.20",
     "@types/react-transition-group": "4.4.4",
     "@types/styled-components": "5.1.14",
